# django_admin_adapter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  adapter_openapi3.yaml  pyproject.toml
django_admin_adapter/: __init__.py  adapter.py  exceptions.py  filters.py  logging.py  permissions.py  throttling.py  utils.py  viewmap.py
django_admin_adapter/serializers/: __init__.py  auth.py  base.py  fields.py  history.py  list.py  object.py
django_admin_adapter/views/: __init__.py  actions.py  auth.py  autocomplete.py  base.py  history.py  info.py  list.py  object.py  user.py  utils.py
src/: .env  compose.yaml
src/docker/admin/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt  settings.py
src/docker/admin_api/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt  settings.py  wsgi.py
src/docker/backend/: settings.py
src/docker/redis/: Dockerfile  instructions  redis.conf  users.acl
src/src/admin/django_admin/: admin.py  urls.py  views.py
src/src/admin/django_admin/filters/: common.py  real_estate.py
src/src/admin/django_admin/forms/: real_estate.py
src/src/admin/django_admin/model_admins/: archive.py  common.py  organization.py  real_estate.py
src/src/admin/django_admin/templates/filters/: autocomplete_filter.html  custom_autocomplete_filter.html  input_filter.html
src/src/admin_api/: admin.py  apps.py  model_admins.py  urls.py  user.py  views.py
src/src/admin_api/filters/: real_estate.py
src/src/admin_api/tests/: conftest.py  utils.py
src/src/admin_api/tests/adapter/: test_adapter_authentication_class.py  test_adapter_default_state.py  test_adapter_extra_views.py  test_adapter_sidebar_registry.py  test_adapter_throttle_classes.py
src/src/admin_api/tests/views/actions/: test_action_execute.py  test_action_preview.py
src/src/admin_api/tests/views/auth_and_perms/: test_auth_views.py  test_authentication_and_base_perms.py  test_change_password.py
src/src/admin_api/tests/views/base/: test_base_admin_object_view.py  test_base_admin_view.py
src/src/admin_api/tests/views/base_info/: test_base_info.py  utils.py
src/src/admin_api/tests/views/list/: test_list_get_no_filters.py  (+2 more)
src/src/backend/: managers.py
src/src/backend/archive/: apps.py  models.py
src/src/backend/archive/migrations/: 0001_initial.py  0002_initial.py
src/src/backend/common/: apps.py  models.py
src/src/backend/common/management/: utils.py
src/src/backend/common/migrations/: 0001_initial.py
src/src/backend/fixtures/common/: country.json
src/src/backend/fixtures/real_estate/: property_category.json  property_category_types.json
src/src/backend/organization/: apps.py  forms.py  managers.py  models.py
src/src/backend/organization/migrations/: 0001_initial.py
src/src/backend/real_estate/: apps.py  constants.py  models.py
src/src/backend/real_estate/migrations/: 0001_initial.py  0002_alter_agreementcommission_agreement.py  0003_agreement_agreement_int_agreement_closure_percentage_and_more.py  0004_agreement_signing_time.py  0005_alter_agreement_agreement_int_and_more.py  0006_alter_agreement_agreement_int.py  0007_agreementcommission_created_at_and_more.py  0008_alter_propertyassociatedcontact_options_and_more.py  0009_project_expected_completion_date.py  0010_alter_project_expected_completion_date.py
src/src/backend/tests/: utils.py
src/src/backend/tests/factories/: __init__.py  abstract.py  common.py  organization.py  real_estate.py
src/src/backend/utils/: files.py  validators.py
(+19 files in other folders)
